add structure of model

--- a/index.html
+++ b/index.html
@@ -1,35 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <main class="nft-card-container">
-        <section class="nft-card-section">
-           <header class="nft-card-header">
-                <img src="" alt="">
-                <h1 class="nft-card-heading">Equilibrium #3429</h1>
-                <p class="nft-card-description-of-heading">Our Equilibrium collection promotes balance and calm.</p>
-           </header>
-               <div class="nft-card-price-date-container">
-               <span>
-                <img src="images/icon-ethereum.svg" alt="">
-                0.041ETH
-               </span>
-               <span>
-                <img src="images/icon-clock.svg" alt="">
-                3 days left
-               </span>
-           </div>
-           <footer>
-            <img src="" alt="">
-            <p>Creation of Jules Wyvern</p>
-           </footer>
-        </section>
+      <section class="nft-card-section">
+        <header class="nft-card-header">
+         <div class="container-image-nft">
+          <img
+            class="nft-card-header-image"
+            src="images/image-equilibrium.jpg"
+            alt=""
+          />
+          <div class="overl"></div>
+          <img class="icon-view" src="images/icon-view.svg" alt="" />
+        </div>
+          <h1 class="nft-card-heading">Equilibrium #3429</h1>
+          <p class="nft-card-description-of-heading">
+            Our Equilibrium collection promotes balance and calm.
+          </p>
+        </header>
+        <div class="nft-card-price-date-container">
+          <span class="price-ethereum">
+            <img class="icon-ethereum" src="images/icon-ethereum.svg" alt="" />
+            0.041ETH
+          </span>
+          <span class="date-left">
+            <img class="icon-clock" src="images/icon-clock.svg" alt="" />
+            3 days left
+          </span>
+        </div>
+        <footer>
+          <img
+            class="image-avatar-footer"
+            src="images/image-avatar.png"
+            alt=""
+          />
+          <p><span>Creation of</span> Jules Wyvern</p>
+        </footer>
+      </section>
     </main>
-</body>
+  </body>
 </html>
